--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "bootstrap": "^4.6.2",
         "classnames": "^2.3.2",
         "customize-cra": "^1.0.0",
         "normalize.css": "^8.0.1",
+        "postcss-cli": "^10.1.0",
         "react": "^18.2.0",
         "react-app-rewired": "^2.2.1",
+        "react-bootstrap": "^2.8.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.11.0",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
@@ -41,12 +46,10 @@
         ]
     },
     "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "autoprefixer": "^10.4.15",
         "babel-plugin-module-resolver": "^5.0.0",
         "postcss": "^8.4.29",
         "sass": "^1.66.1",
-        "scss": "^0.2.4",
-        "tailwindcss": "^3.3.3"
+        "scss": "^0.2.4"
     }
 }
