--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
         "react-paginate": "^8.2.0",
+        "react-responsive": "^9.0.2",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
+        "react-transition-group": "^4.4.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
