--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "bootstrap": "^4.6.2",
         "classnames": "^2.3.2",
         "customize-cra": "^1.0.0",
+        "date-fns": "^2.30.0",
         "normalize.css": "^8.0.1",
         "postcss-cli": "^10.1.0",
         "react": "^18.2.0",
