--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT = 5002
+# MONGODB_URI = mongodb+srv://sa:sa@cluster0.vadgnss.mongodb.net/listing-app?retryWrites=true&w=majority
 MONGODB_URI = mongodb://localhost:27017/listing-app
 LIMIT_GAMES = 2
